syntax = "proto3";

option csharp_namespace = "GrpcGetDataToWareHouse";

package WareHouseApi;
//import "google/protobuf/timestamp.proto";
// note: -sự lặp lại-tương đương với list hoặc IEnumerable<T>
// đặt tên file không dùng chữ hoa

//Service Gprc
service GrpcGetDataWareHouse {
    rpc GetListWarehouseById(BaseId) returns (ListStringWareHouseId) {}
    rpc GetListWarehouse(BaseId) returns (ListStringWareHouseId) {}

}
message ListStringWareHouseId{
      string idWareHouseList =1;
}
message BaseId{
    string idWareHouse=1;
}
message Params {
 // string name =1;
}
message ListCreateBy{
    repeated BaseSelectDTO listCreateBy=1;

}

message BaseSelectDTO{
    string id=1;
    string name =2;
}

message ListGetDepartment{
    repeated BaseSelectDTO listGetDepartment=1;

}


message ListGetEmployee{
    repeated BaseSelectDTO listGetEmployee=1;

}


message ListGetStation{
    repeated BaseSelectDTO listGetStation=1;

}


message ListGetProject{
    repeated BaseSelectDTO listGetProject=1;

}


message ListGetCustomer{
    repeated BaseSelectDTO listGetCustomer=1;

}

















